tests/fixtures/errors/interp_class.z
Holder: class {
    n: i64
}

main: function is {
    h: Holder n: 5
    print "h=\{h} end"
}
